# AngWeb

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ang.cpp  cmake_install.cmake
client/: client  main.cpp  make.sh
conf/: config.txt
doc/: 需求文档.md
scr/: CMakeLists.txt  ang.cpp  config.h  socket.cpp  socket.h
src/: .serverSocket.cpp.swp  CMakeLists.txt  Makefile  cmake_install.cmake  config.cpp  config.h  serverSocket.cpp  serverSocket.h
test/: .client.cpp.swp  build.sh  client.cpp  out
